# Voxels

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Assets/Shaders/: ChunkDepth.frag  ChunkDepth.vert  ChunkGBuffer.frag  ChunkGBuffer.vert  DeferredLighting.frag  Outline.frag  Outline.vert  Quad.frag  Quad.vert  Sky.frag  Sky.vert  Water.frag  Water.vert
Source/: Application.cpp  Application.h  Coordinates.h  Input.cpp  Main.cpp  UIOverlay.cpp  UIOverlay.h  Window.cpp  Window.h
Source/Core/: Application.cpp  Application.h  Common.h  Config.h  DebugState.h  Input.cpp  Input.h  Logger.cpp  Logger.h  UIOverlay.cpp  UIOverlay.h  Window.cpp  Window.h  WorkQueue.h
Source/DataStructures/: CircularBuffer.h  FixedBuffer.h  LRUCache.h
Source/ECS/: ComponentArray.h  Components.h  ECS.h  EntityFactory.cpp  EntityFactory.h
Source/Math/: MathUtils.h  Noise.cpp  Noise.h
Source/Memory/: ArenaAllocator.cpp  ArenaAllocator.h  ChunkAllocator.cpp  ChunkAllocator.h  PoolAllocator.cpp  PoolAllocator.h
Source/Physics/: PhysicsSystem.cpp  PhysicsSystem.h  PhysicsUtils.h  Raycast.cpp  Raycast.h
Source/Platform/: PlatformMemory.cpp  PlatformMemory.h
Source/Rendering/: BlockOutlineRenderer.cpp  BlockOutlineRenderer.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ChunkRenderer.cpp  ChunkRenderer.h  CrosshairRenderer.cpp  CrosshairRenderer.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Source/Utils/: Common.h  Config.h  Coordinates.h  Logger.cpp  Logger.h
Source/World/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  ChunkUtils.h  ChunkVertex.cpp  ChunkVertex.h  Coordinates.h  PlayerController.cpp  PlayerController.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
assets/shaders/: ChunkDepth.frag  ChunkDepth.geom  ChunkDepth.vert  ChunkGBuffer.frag  ChunkGBuffer.vert  DeferredLighting.frag  Foo.frag  Foo.vert  Quad.frag  Quad.vert  SSAO.frag  SSAOBlur.frag  Water.vert  chunk.frag  chunk.vert  outline.vert
src/: CircularBuffer.h  Coordinates.h  LRUCache.h  Logger.h  Main.cpp  Window.cpp
src/ecs/: ComponentArray.h  Components.h  ECS.h  EntityFactory.cpp  EntityFactory.h
src/math/: MathUtils.h  Noise.cpp  Noise.h
src/physics/: PhysicsSystem.cpp  PhysicsUtils.h  Raycast.cpp  Raycast.h
src/rendering/: BlockOutlineRenderer.cpp  BlockOutlineRenderer.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ChunkRenderer.cpp  ChunkRenderer.h  CrosshairRenderer.cpp  CrosshairRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  (+9 more)
